--- a/数学基础/MIT 1801.md
+++ b/数学基础/MIT 1801.md
@@ -51,29 +51,17 @@ $$\begin{align}
 \end{align}$$
  
 当 $Δx \to 0$ 时取极限，$$\lim_{\Delta x \to 0} \frac{-1}{(x_0 + \Delta x) x_0} = \frac{-1}{x_0^2}$$
+因此，$$f'(x)=-\frac{1}{x_{0}^2}$$
+请注意，$f'(x_0)$ 为负值，这与上图切线斜率为负的情况一致。
+
+**寻找切线**：
+
+写出点 $(x_0, y_0)$ 处的切线方程，使用你们在高中代数中学过的直线方程：$$y-y_{0}=f'(x_{0})(x-x_{0})$$代入 $y_{0}=f(x_{0})=\frac{1}{x_{0}}$ 和 $f'(x_{0})=-\frac{1}{x_{0}^2}$，得到：$$y-\frac{1}{x_{0}}=-\frac{1}{x_{0}^2}(x-x_{0})$$
+只是为了好玩，我们来计算一下切线与 $x$ 轴和 $y$ 轴形成的三角形的面积（见图 4 中的阴影区域）。
 
 
 
 
-因为分子和分母都得到了0/0的结果。但现在我做了这个约简后，就可以取极限了。我所做的只是令Δx趋近于0，于是得到-1/x₀²。这就是答案。好的，换句话说，我所证明的——让我写在这里——就是f'(x₀) = -1/x₀²。现在，我们稍微看一下图像来验证这个结果的合理性，好吗？首先，导数是负的。它小于0，这是合理的。你可以看到那里的斜率是负的。这是你能做的最简单的验证。其次我想指出的是，当x趋近于无穷大时，也就是当我们向右移动得越来越远时，曲线变得越来越平缓。
-
-随着x_0趋近于无穷大，斜率越来越平缓。这也与此处情况相符——当x_0非常大时，这个数值的绝对值会越来越小（尽管始终为负值），曲线始终呈下降趋势。好了，黑板已经写满了，或许该暂停一下回答几个问题。请讲？学生：[听不清]教授：问题是要再次解释这个极限过程。这个公式本质上涉及两个数值。换句话说，为什么当Δx趋近于0时，这个表达式等于-1/x_0²？让我通过代入具体数值来更直观地说明。
-
-好的，举个例子，假设x₀等于3。那么表达式就变成了-1除以（3加上Δx乘以3）。这就是我们目前的情况。现在的问题是，当Δx越来越小，趋近于0时，结果会怎样？实际上，我们可以直接把0代入，分母就变成了3加0乘以3，分子仍然是-1。因此，这个表达式趋近于-1/9（也就是3的平方分之-1）。这就是我通过这个额外数字想表达的普遍规律。还有其他问题吗？有。学生：[听不清]教授：问题是这一步和下一步之间发生了什么，对吧？
-
-解释一下这一步。好的，这部分有两个要点。首先，分母中的这个Δx，我把它完全提取到了前面。因此括号里的内容应该与另一个表达式的分子部分相同。与此同时，在处理这个由两个分数相减组成的表达式时，我通过通分进行了合并。所以在这里的分母中，你可以看到两个分数分母的乘积。然后我直接推导出了分子应该是什么，而没有真正......还有其他问题吗？好的。
-
-所以我主张，总的来说，微积分被不公平地妖魔化了，它其实比大多数学科都要简单。但人们普遍认为它更难。因此，我确实有责任在这里给你们讲讲“故意把微积分变难”的故事。我们必须把事情复杂化，因为这就是我们的工作。而这正是大多数人在微积分课上做的事，也是微积分名声不佳的原因。秘诀在于——当人们提出微积分问题时，通常会把它放在具体情境中。而情境里还掺杂着无数其他干扰因素。真正属于微积分的那一小部分问题其实相当常规，需要被剥离出来单独解决。
-
-但其余部分则依赖于你从小学到高中在数学中所学的一切知识。这就是复杂之处。现在，我们要通过讨论一个应用题来稍微增加微积分的难度。由于目前我们只讨论了几何学的视角，因此我们只能提出一种类型的应用题。到目前为止，这些是我们唯一能提出的应用题类型。所以，我们要做的就是提出这样一个问题：求由坐标轴和y=1/x的切线所围成的三角形的面积。好的，这是一个几何问题。
-
-让我来画一下它的示意图。实际上，这和第一个例子的图几乎是一样的。我们只考虑第一象限。这是我们的图形。好的，这是一条双曲线。这里可能是其中一条切线，像这样过来。然后我们试图找出这里的面积。对，这就是我们的问题。那么为什么它和微积分有关呢？因为它涉及到切线，所以我们需要用微积分来解答这个问题。但你会发现，微积分其实是简单的部分。那么让我们开始解决这个问题吧。首先，我要标注一些东西。
-
-当然，有一点很重要，就是要记住这条曲线是 y = 1/x。这样做完全合理。另外，我们要计算三角形的面积，你可能会问，用什么来表示呢？嗯，我们得选一个点并给它命名。既然我们需要一个数字，我们就不能只靠几何学，还得像之前那样做一些分析。所以我要选一个点，按照我们之前的标记方式，我打算叫它 (x_0, y_0)。这样，符号问题就解决了一半，用 x 和 y 表示变量，用 x_0 和 y_0 表示特定的点。
-
-现在，一旦你看到这些标记，我希望接下来的操作是合理的。首先，这里是点x_0，那边是点y_0。这是我们在图表中常见的表示方式。为了求出这个三角形的面积，显然我们需要找到底边，也就是要确定这个位置。同时我们还需要找到高，所以需要求出那个值。让我们开始吧。我们该怎么做呢？好，让我们来看一看。我们需要做什么呢？我认为这里只有一个微积分步骤，我会在这里为这条切线画一个星号标记。
-
-我必须理解什么是切线。一旦我弄清楚了切线是什么，剩下的问题就不再是微积分了。我们只需要那个斜率。那么切线的公式是什么呢？把它写在这里。它将是 y - y_0 等于，这里有一个神奇的数字，我们已经计算过了。它在那个盒子里。它是 -1/x_0^2 (x - x_0)。所以这是这个问题中唯一的微积分部分。但现在我们还没有完成。我们必须完成它。我们必须计算出所有剩下的这些量，以便我们能计算出面积。好吧。那么我们该怎么做呢？嗯，要找到这个点，它有一个名字。
 
 我们要找到所谓的x截距。这是我们首先要做的。为此，我们需要找到这条水平线与对角线的交点。x截距的方程是y=0。所以我们代入y=0，也就是这条水平线，然后找到这个点。让我们把这个代入星号方程。我们得到0减去，哦，还有一点我们需要知道。我们知道y0等于f(x0)，而f(x)等于1/x，所以这个就是1/x0。这等于-1/x0²。这里是x，这里是x0。好了，为了找到这个x值，我需要把一个方程代入另一个方程。这样方程就简化了一些。
 
