--- a/基础物理/杨振宁/第十五讲.md
+++ b/基础物理/杨振宁/第十五讲.md
@@ -1,7 +1,6 @@
 
 The results of the Qizhong test were very good.and perhaps talk to Professor Rang or Professor An about how you could do better later on this semester. It's clear that the average score of Tsinghua students is much better than my students at Stony Brook. So I'm pleased about that.（期中测试的成绩很好，大部分人成绩在 70-100 之间，平均分是 86，那些不到 70 分的同学，或许你可以和冉教授或安教授谈谈这学期后期如何做得更好。显然，清华大学学生的平均成绩比我石溪分校的学生要好得多。对此我感到很高兴。）
 
-
 Today's first topic is gravity inside Earth. We talked about the shell theorem last time. That is, if you consider the gravity due to this shell at a point inside the Earth, there is no force on it. Now for the next shell, there's also no force. So that means all the material in the Earth outside of this circle together have no gravity on this point. The gravity on that point is due to all the material inside of that radius.So this gravity at all equal to gravity due to the material inside the sphere of radius R. Now, that material has a mass of is equal to 4 pi over 3 times R cubed. Well, we are assuming a uniform sphere. This is not true, but let us assume it's a uniform sphere.The volume of the sphere is 4 pi over 3 times R cubed. If rho is the density, then that material has a mass of this amount. （今天的第一个主题是地球内部的重力。我们上次讨论了壳层定理。也就是说，如果你考虑地球内部某一点由这个壳层产生的重力，那么该点不受力。现在来看下一个壳层，同样没有力。这意味着地球在这个圆圈之外的所有物质对这个点都没有引力作用。该点的引力完全来自于该半径以内的所有物质。因此，这个引力等于半径为R的球体内物质产生的引力。现在，假设这是一个均匀球体（虽然实际情况并非如此），该球体的体积为4π/3乘以R的立方。如果ρ表示密度，那么这部分物质的质量就等于这个体积乘以密度。）
 
 这部分物质的质量：$\frac{4}{3}\pi r^3 \cdot \rho$
@@ -23,18 +22,22 @@ Now we talk about Section 10-6, Gravitational Potential Energy. 引力的位能,
 所以上述关于 $U$ 公式结论成立。
 
 而在三维情况下，需要偏微分，$$U=-\frac{GMm}{\sqrt{ x^2+y^2+z^2 }}$$
-
-(12.30)
-
-
-
 那么,对于x,y,z,你要differentiate的时候, 叫做partial differentiation, that means, when you differentiate relative to x, you consider y and z as fixed.When you differentiate with respect to y, you consider x and z as fixed. So, this notation叫做force,是一个vector, 是du dx,minus du dx, minus du dy, minus du dz. 这个notation是叫partial differentiation.这里有一个平常的这个叫做gradient, 三角形加一个箭头的意思, 就是三个partial differentiation, partial x, partial y, partial z. OK,我们来试一下。 假如我们take这个的话, 那么,du dx是等于minus g m m, 乘上du d这个square root, 然后,d这个square root,dx。 （那么，对于x、y、z进行微分时，就叫做偏微分。也就是说，当你对x微分时，要把y和z视为常数；当你对y微分时，要把x和z视为常数。这个记号叫做力，是一个矢量，即du/dx、-du/dx、-du/dy、-du/dz。这个记号称为偏微分。这里有个常用的符号叫梯度，用倒三角形加箭头表示，就是三个偏微分：∂/∂x、∂/∂y、∂/∂z。好，我们来试一下。如果我们取这个的话，那么du/dx等于负g乘以m乘以m，再乘以du/d这个平方根，然后d这个平方根/dx。）
 
+$$\vec{F}=\left( -\frac{\mathrm{d}U}{\mathrm{d}x}, -\frac{\mathrm{d}U}{\mathrm{d}y},-\frac{\mathrm{d}U}{\mathrm{d}z}\right)=-\vec{\nabla}U$$
 
 这就是所谓chain rule, 你在differentiate的时候, 这是minus g m m, 那du d这个东西呢, 这u是1 over r, du d 1 over r, 这个minus 1 over r squared, 所以这个是minus 1 over, d这个square root,dx呢, 是等于二分之一的square root, 二分之一,1 over square root, 乘上d这个square root, d这个square root的inside, 就是x squared,加y squared,加z squared,dx。 因为这是中间的东西的二分之一, 所以dsquare root of一个something, 是等于二分之一的1 over square root of that thing, 乘上d它里头的,所以就变成这个。 对不起。 这还要乘上dx squared,加y squared,加z squared,dx。 这个算了一顿以后, 就得出来g m m r squared, 乘上x over r。 （这就是所谓的链式法则。当你进行微分时，这里是负的g m m。那么du d这个东西呢，u等于1除以r，du d(1/r)就是负的1除以r的平方，所以这里是负的1除以... d这个平方根，dx等于二分之一乘以平方根，也就是二分之一乘以1除以平方根，再乘以d这个平方根内部的内容，即x平方加y平方加z平方，关于dx的微分。因为这是中间步骤的二分之一，所以d(某物的平方根)等于二分之一乘以1除以该物的平方根，再乘以d该物内部的微分，于是就得到了这个结果。抱歉，这里还需要乘以dx平方加y平方加z平方关于dx的微分。经过这一系列计算后，最终得到g m m除以r平方，乘以x除以r。）
 
+求对 $x$ 的偏微分：$$\frac{\partial U}{\partial x}=\frac{\partial U}{\partial r}\cdot\frac{\partial r}{\partial x}=GMm\cdot \frac{1}{r^2}\cdot \frac{\partial r}{\partial x}$$
+$r=\sqrt{ x^2+y^2+z^2 }$，所以 $\partial r/\partial x=\frac{x}{r}$，所以上式结果为：$\frac{GMmx}{r^3}$，同理对 $y,z$ 的偏微分结果雷同。即：$$\vec{F}=-\nabla U=-\frac{GMm}{(x^2+y^2+z^2)^{3/2}}(x,y,z)=-\frac{GMm}{r^2}\frac{\vec{r}}{r}$$
+最后一项 $\frac{\vec{r}}{r}$ 实际上就是 $\vec{r}$ 方向的单位向量。
+
+
 
 所以你这样算出来这个f, 就等于g m m over r squared, 有个负号,因为这有个负号, 乘上x over r,同样y over r,z over r, 它是三个component。 这个间线呢,就变成minus g m m over r squared, 乘上r over r。 这是什么意思呢? 这个是the force, r over r是unit vector along the r direction, 所以比如说是, 这空间有一点, 这个unit vector是r over r, 因为r over r当然是在r direction, 它的magnitude是1, 所以这是unit vector。 那所以这个force是对的。 Correct. In other words, we have proven that u是等于这个。 在three dimension的时候,u也是对的。 这个formula可以记得。（所以你这样算出来这个力f，就等于g m m除以r的平方，有个负号（因为这里有个负号），乘以x除以r，同理y除以r，z除以r，这是它的三个分量。这个中间步骤呢，就变成了负的g m m除以r的平方，乘以r向量除以r。这是什么意思呢？这个力，r向量除以r是沿r方向的单位向量。比如说，空间中有个点，这个单位向量就是r向量除以r，因为r向量除以r自然是在r方向上，其模长为1，所以是单位向量。因此这个力是正确的。没错。换句话说，我们已经证明了u等于这个。在三维情况下，u也是正确的。这个公式可以记下来。）
+
+
+（18.34）
 
 所以这个force是可以写成这样。 Conservation of energy. 我们现在有这个formula, F是等于minus gradient of u, gradient的意思就是d dx,d dy,d dz, 可是我们知道这东西是等于m乘上r double dot, 这是Newton's law, 所以我把它用r dot, dot一下子, 我把它写成minus r dot, dot, 右边这是什么? 右边就等于d dt, of 1 over 2, m, r dot, dot r dot, 你同意不同意? Because if I differentiate this, I can differentiate this one first. Plus, I differentiate this one. Those terms would give you r dot dot r double dot. So that two cancels this two, so this is this.（所以这个力可以这样表示。能量守恒。我们现在有这个公式，F等于负的u的梯度，梯度的意思就是d/dx, d/dy, d/dz，但是我们知道这个东西等于m乘以r的二阶导数，这是牛顿定律，所以我用r的一阶导数来表示它，一下子写成负的r的二阶导数，右边是什么？右边等于d/dt，1/2乘以m，r的一阶导数点乘r的一阶导数，你同意吗？因为如果我对此求导，我可以先对这个求导。再加上，我对这个求导。这些项会给你r的一阶导数点乘r的二阶导数。所以这两个抵消了这两个，所以这个就是这个。）
 
