--- a/数学基础/MIT 1801.md
+++ b/数学基础/MIT 1801.md
@@ -116,13 +116,15 @@ $O(\Delta x)^2$  是所有包含  $(\Delta x)^2$ 、$(\Delta x)^3$  等的项，
 当南瓜落地时，$y=0$，$$400-16t^{2}=0$$解得 $t=5$。因此，南瓜落到地面需要 $5$ 秒。$$\text{平均速度} =\frac{400\ \text{ft}}{5\ \text{sec}}=80\ \text{ft/s}$$观众可能更关心南瓜砸到地面时的速度。为了求 $t=5$ 时的瞬时速度，我们来计算 $y'$：$$y'=-32t=(-32)(5)=-160\ \text{ft/s} \text{（约 110 英里/小时）}$$
 $y'$ 为负值是因为南瓜的 $y$ 坐标在减小：它正在向下运动。
 
+$q$ 通常代表电荷，而 $\mathrm{d}q/\mathrm{d}t$ 就是我们所说的电流。
 
 -------------
 
 ## 第二讲：极限、连续性与三角函数的极限
 
-$q$ 通常代表电荷，而 $\mathrm{d}q/\mathrm{d}t$ 就是我们所说的电流。
-
+### 2.1 更多关于导数“变化率”解释的内容
+  
+![[Pasted image 20251223211914.png|300]]
 
 因此，为了方便起见，我们将使用80米来代替300英尺，这样计算起来更简单。我们有一个初始高度，在时间0时为80米，然后重力加速度给出了高度h的公式。在时间t=0时，我们处于最高点，h为80米，这里的单位是米。而在时间t=4时，你会注意到5乘以4的平方等于80。我特意选择了这些数字，这样我们在底部时计算会更方便。
 
